--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30878,7 +30878,7 @@ a {
 .card {
     background-color: #fff;
     border-radius: 10px;
-    padding: 20px !important;
+    /* padding: 20px !important; */
     border:none !important;
 }
 
