--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24579,8 +24579,8 @@ form label.error {
     z-index: 9999;
 }
 
-#status,
-.status-mes {
+#statusPreloader,
+#statusPreloader .status-mes {
     background-image: url(../images/loading.gif);
     background-position: center;
     background-repeat: no-repeat;
