--- a/resources/js/Components/create_project_components/TopCreateProjectNavigator.css
+++ b/resources/js/Components/create_project_components/TopCreateProjectNavigator.css
@@ -74,6 +74,26 @@
   margin-left: 5px;
   display: inline-block;
 }
+
+.modalContinueAdv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContinueAdv .modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
 .ql-editor {
   box-sizing: border-box;
   line-height: 1.42;
