--- a/resources/js/Components/create_project_components/TopCreateProjectNavigator.css
+++ b/resources/js/Components/create_project_components/TopCreateProjectNavigator.css
@@ -1330,14 +1330,13 @@ input:checked + .slider:before {
 }
 .add-new-block {
   text-align: center;
-  position: absolute;
-  top: -12.5px;
+  /* top: -12.5px; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: 25px;
-  width: 25px;
-  background: #e54242;
+  width: 100px;
+  background: #007bff;
   color: #fff;
   padding: 0 15px;
   left: 100px;
@@ -1370,7 +1369,11 @@ input[type="file"]{
   position: sticky !important;
   top: 20px; /* Adjust as needed */
   left: 20px; /* Adjust as needed */
-  width: 250px; /* Adjust as needed */
+  width: 100%; /* Adjust as needed */
+}
+
+p{
+  line-height: 16px;
 }
 
 /* Add this CSS to your existing stylesheet or component */
@@ -1405,11 +1408,13 @@ input[type="file"]{
 .block-list::-webkit-scrollbar-thumb:hover {
   background: #555; /* Color of the scroll thumb when hovered */
 }
-
+.block-info{
+  margin-left: 5px;
+}
 .block {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 10px;
   background-color: #f5f5f5;
   border: 1px solid #ddd;
@@ -1427,7 +1432,7 @@ input[type="file"]{
 }
 
 .block-name {
-  flex-grow: 1;
+  flex-grow: 0.2;
 }
 
 
@@ -1450,7 +1455,7 @@ input[type="file"]{
   font-size: 11px;
   position: absolute;
   left: 0px;
-  top: 30px;
+  top: 34px;
   padding: 2px 2px;
   color: #fff;
   width: 100%;
