--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -228,7 +228,7 @@ button {
   margin-bottom: 30px;
   position: relative;
 }
-.cover-photo div{
+.project_imagex_flex{
   display:flex;
   align-items:center;
   margin-top:30px
@@ -239,7 +239,8 @@ button {
 }
 
 .project_imagex{
-  width:20%;
+  width: 150px;
+  height: 100px;
   cursor:move;
 }
 .mbb {
@@ -284,7 +285,7 @@ button {
 img {
   display: inline-block;
   max-width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .bg-white {
