--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31274,7 +31274,8 @@ a {
 
   #cover_image.upload-container,
   #authority_certificate.upload-container,
-  #document.upload-container{
+  #document.upload-container,
+  #gallery.upload-container{
     background: #fff none repeat scroll 0 0;
     border: 2px dashed #1ABC9C;
     /* padding: 50px 20px; */
